# zotero-mcp

./: .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY_AUDIT.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-03-feature-1-pdf-content-locator.md  2026-04-03-feature-2-semantic-search.md  2026-04-03-feature-3-retraction-alerts.md  2026-04-03-feature-4-duplicate-detection.md  2026-04-03-feature-5-trash-citation-graph.md  2026-04-07-zotero-mcp-hardening.md  2026-04-09-feature-7-knowledge-graph.md
docs/superpowers/specs/: 2026-04-03-feature-roadmap-design.md  2026-04-09-v060-knowledge-graph-enrichment-design.md
mcpb/: README.md  build.py
src/zotero_mcp/: __init__.py  __main__.py  _orphan_watchdog.py  capabilities.py  citation_writer.py  config.py  graph_renderer.py  graph_store.py  knowledge_graph.py  local_audit.py  local_client.py  openalex_client.py  semantic_scholar_client.py  server.py  ssl_health.py  text_extractor.py  web_client.py
tests/: test_capabilities.py  test_citation_graph.py  test_citation_writer.py  test_config.py  test_duplicates.py  test_entities.py  test_graph_renderer.py  test_graph_store.py  test_knowledge_graph.py  test_local_audit.py  test_local_client.py  test_logging.py  test_openalex.py  test_orphan_watchdog.py  test_pdf_content.py  test_preprint_resolver.py  test_retractions.py  test_retry.py  test_semantic_scholar.py  test_server.py  test_ssl_health.py  test_text_extractor.py  test_trash.py  test_validation.py  test_web_client.py  test_web_client_pdf.py
