[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-mcp"
version = "0.4.0"
description = "MCP server for Zotero — hybrid local reads + web writes"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1",
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
    "python-docx>=1.1.0",
]

[project.scripts]
zotero-mcp = "zotero_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22.0",
]
