[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-mcp"
version = "0.8.1"
description = "MCP server for Zotero — search, organize, cite, and analyze your library"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1",
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
    "python-docx>=1.1.0",
    # Use OS trust store for HTTPS — avoids broken/stale bundled CA bundles
    # (e.g. Homebrew Python 3.14 ships a cert.pem with a non-critical Basic
    # Constraints CA that fails verification). Tiny (~18 KB) and requires
    # Python >= 3.10; server.py falls back gracefully if missing.
    "truststore>=0.9",
]

[project.scripts]
zotero-mcp = "zotero_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22.0",
    "ruff>=0.9",
]
graph = [
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.12",
]
fulltext = ["pypdf>=4.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "SIM108", # ternary operator (readability preference)
    "SIM105", # contextlib.suppress — less readable than try/except/pass
    "SIM115", # context manager for open — not always applicable (NamedTemporaryFile)
    "SIM117", # nested with — auto-format handles readability
    "B017",   # pytest.raises(Exception) — acceptable in tests
    "B905",   # zip strict — tighten later
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # imports after code (common in test files)

[tool.ruff.lint.isort]
known-first-party = ["zotero_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_mcp"]

